<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:id="@+id/gameScreenRootLayout">

    <RelativeLayout
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="29dp"
        android:background="#000000"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/gameScreenPlayerNameText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/label_playerName"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/gameScreenScoreText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/label_score"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/gameScreenDifficultyText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/label_difficulty"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/gameScreenHPText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/label_hp"
            android:textAlignment="center"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <!-- Pause Button -->
    <ImageView
        android:id="@+id/button_back"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:clickable="true"
        android:focusable="true"
        android:contentDescription="@string/description_pauseButton"
        android:src="@drawable/pause_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>


    <RelativeLayout
        android:id="@+id/gameOverlayView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.935">


        <Button
            android:id="@+id/attack_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="75dp"
            android:text="Attack" />

        <ImageView
            android:id="@+id/joystickBackground"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/digital_joystick_background"
            app:srcCompat="@drawable/digital_joystick_background" />

        <ImageView
            android:id="@+id/joystickCenter"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:src="@drawable/digital_joystick_center"
            app:srcCompat="@drawable/digital_joystick_center" />
        <ImageView
            android:id="@+id/score_image_invis"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="205dp"
            android:layout_marginBottom="630dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/level_up" />

        <ImageView
            android:id="@+id/attack_image_invis"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="305dp"
            android:layout_marginBottom="630dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/attackpower" />

        <ImageView
            android:id="@+id/teleport_image_invis"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="255dp"
            android:layout_marginBottom="630dp"
            android:visibility="invisible"
            app:srcCompat="@drawable/teleportpower" />

        <ImageView
            android:id="@+id/health_image_invis"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="630dp"
            android:layout_toStartOf="@+id/attack_image_invis"
            android:visibility="invisible"
            app:srcCompat="@drawable/heartpower" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>